2006-10-20  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/arpeggio.cc (Module): idem.

	* lily/accidental-placement.cc: add script-priority property.

	* scm/framework-ps.scm (dump-stencil-as-EPS): thinko.

	* lily/ttf.cc (print_trailer): if all else fails: use
	glyphIndexXXXX as glyph name. Fixes #117.

	* lily/pango-font.cc (pango_item_string_stencil): only use cmap
	entry if cmap contains glyph.
	(get_index_to_charcode_map): remove from Pango_font class, use
	global filename -> font mapping.
	(get_glyph_index_name): new function.
	(pango_item_string_stencil): use glyphIndexXXXX as glyph name,
	only for TTF. 

	* scripts/lilypond-book.py (main): use -deps-box-padding=-3

	* scm/framework-ps.scm (dump-stencil-as-EPS): use eps-box-padding,
	a number.

	* scm/define-grob-properties.scm (all-user-grob-properties):
	remove outdated doc. Fixes #116

	* lily/completion-note-heads-engraver.cc (process_music): always
	clone input events; otherwise we may overwrite input 'duration
	property. Fixes #115.

	* lily/general-scheme.cc (LY_DEFINE): explicit cast in case
	scm_t_int32 != int

	* scm/output-svg.scm (pango-description-regexp-comma): Remove ^
	anchor. Fixes #114

	* VERSION (PATCH_LEVEL): bump version.

2006-10-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/engraver.cc (internal_make_grob): use variables.

	* flower/string-convert.cc (dec2double): clean-up warnings. 

	* configure.in (CXXFLAGS): add -Werror.

	* VERSION (PACKAGE_NAME): release 2.9.25

2006-10-18  Joe Neeman  <joeneeman@gmail.com>

	* lily/simple-spacer.cc (get_line_forces): test for non-fitting
	line even if we precede a forced break.

	* lily/optimal-page-breaking.cc (try_page_spacing): square line
	forces too. Make page-spacing weight default to 10 because the
	changes to vertical springs decreased the page force/line force
	proportions. Also, take the average of line force and page force
	instead of just the sum.

	* lily/constrained-breaking.cc (initialize): make the stiffness