@@ -475,6 +475,12 @@ Context::internal_set_property (SCM sym, SCM val
 #endif
 				)
 {
+#ifndef NDEBUG
+  (void) file;
+  (void) line;
+  (void) fun;
+#endif
+
   if (do_internal_type_checking_global)
     assert (type_check_assignment (sym, val, ly_symbol2scm ("translation-type?")));
 
